# amos-managed-platform

./: .containerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  docker-compose.yml  podman-compose.yml
.github/workflows/: deploy.yml
docs/: CONSTRUCTION-CRM-PLAN.md  INTEGRATION-ONRAMPS-PLAN.md  MCP.md  PLATFORM-BUILD-PLAN.md
examples/: build_image_live.rs  deploy_aws_live.rs  mint_token.rs
migrations/: 20250311000001_add_alb_routing_columns.sql  20260327000001_create_releases_table.sql  20260328000001_add_harness_name.sql  20260329000001_add_stripe_billing_tables.sql  20260401000001_harness_roles.sql  20260408000001_add_hosted_plan.sql  20260408000002_per_harness_billing.sql  20260410000001_harness_database_name.sql  20260411000001_llm_usage_tracking.sql  20260503000001_add_subscription_credit_balance.sql  20260622000001_create_app_deployments.sql  20260623000001_create_operation_receipts.sql  20260623000002_app_deployments_aws_meta.sql  20260624000001_app_hosting_plans.sql  20260628000001_oauth_connector.sql  20260628000002_password_reset_tokens.sql
scripts/: smoke-test.sh
src/: lib.rs  rbac.rs  server.rs  state.rs
src/auth/: mod.rs
src/billing/: app_hosting.rs  guards.rs  metered_billing.rs  mod.rs  stripe_service.rs  usage_metering.rs
src/email/: mod.rs
src/governance/: mod.rs
src/mcp/: ask_amos.rs  finance.rs  mod.rs
src/middleware/: mod.rs
src/oauth/: mod.rs
src/proof/: mod.rs
src/provisioning/: alb.rs  app_deploy.rs  app_spec.rs  aws_app.rs  compose_intake.rs  db.rs  db_query.rs  ecs.rs  env_provision.rs  image_builder.rs  manifest.rs  mod.rs
src/routes/: admin.rs  apps.rs  auth.rs  billing.rs  discovery.rs  governance.rs  mod.rs  provisioning.rs  releases.rs  sync.rs  tenants.rs  token.rs  ui.rs  webhooks.rs
src/services/: app_orchestrator.rs  bounty_service.rs  mod.rs
src/solana/: mod.rs
templates/: apps.html  base.html  billing_upgrade.html  dashboard.html  forgot_password.html  login.html  receipts.html  register.html  reset_password.html  self_host.html  settings.html
terraform/: .gitignore
terraform/aws-app/: main.tf
tests/: integration_tests.rs
