[package]
name = "amos-platform"
description = "AMOS Platform - centralized managed hosting, governance, billing, and provisioning"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/amos-labs/amos-managed-platform"
rust-version = "1.88"

[[bin]]
name = "amos-platform"
path = "src/main.rs"

[dependencies]
amos-core = { git = "https://github.com/amos-labs/amos-platform-2.0", features = ["db", "http"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout", "fs"] }

# gRPC (harness <-> platform communication)
tonic = "0.13"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Image build context packaging (compose `build:` services)
tar = "0.4"
ignore = "0.4"
bytes = "1"
shlex = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Solana
solana-sdk = "2.1"
solana-client = "2.1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits (dyn-dispatchable engine client boundaries)
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Docker/container provisioning (local dev)
bollard = "0.18"

# AWS ECS provisioning (production Fargate) + ALB routing
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1"
aws-sdk-elasticloadbalancingv2 = "1"
# Build-as-a-service: cloud image builds via CodeBuild (S3 context -> ECR).
aws-sdk-codebuild = "1"
aws-sdk-s3 = "1"
aws-sdk-ecr = "1"
aws-sdk-cloudwatchlogs = "1"
# Governed db_query: read the tenant app DB connection secret at query time.
aws-sdk-secretsmanager = "1"
# ask_amos: embedded Bedrock (Claude) manager loop over the read-only control verbs.
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1"
# Usage metering: per-service CpuReserved/MemoryReserved/NetworkTxBytes from
# Container Insights -> exact unit-hours + egress for app-hosting billing.
aws-sdk-cloudwatch = "1"
# Zip the build context for CodeBuild's S3 source (it expects a ZIP archive).
zip = { version = "2", default-features = false, features = ["deflate"] }

# Stripe billing
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper-rustls", "checkout", "billing", "webhook-events"] }

# Misc
secrecy = { version = "0.10", features = ["serde"] }
dotenvy = "0.15"
config = "0.14"
bs58 = "0.5"
hex = "0.4"
sha2 = "0.10"

# Auth / JWT
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Templates (SSR UI)
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.43", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
